--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,24 @@
-# 忽略 Python 编译文件
+# Python 编译缓存
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 
-# 忽略环境变量文件
-.env
-*.env
-
-# 忽略虚拟环境目录
+# 虚拟环境（如果使用）
 venv/
 .virtualenvs/
 
-# 忽略日志文件
-logs/
-*.log
 
-# 忽略 IDE 和编辑器相关的文件
+
+# 日志和临时文件
+*.log
+*.tmp
+
+# IDE 配置文件（如 VS Code、PyCharm）
 .vscode/
 .idea/
-*.swp
 
-# 忽略 MacOS 生成的系统文件
-.DS_Store
+# 其他
+.DS_Store  # macOS 生成的系统文件
 
+最新项目的pip.txt
